# AxolotlSD

./: .gitmodules  Funk.axsd  Funk.mid  README.md
cxx/: .gitignore  CMakeLists.txt
cxx/include/: axolotlsd.hpp
cxx/src/: axolotlsd.cpp
cxx_test/: .gitignore  CMakeLists.txt  example.abc  example1.mid
cxx_test/include/sfx/: sfx00.raw  sfx00.raw.h
cxx_test/src/: axolotlsd_test.cpp
export/: export.py
godot/: AXSDAudioStreamData.gd  AXSDAudioStreamPlayer.gd  AXSDAudioWAVProfile.gd
sample_pack/: bank.json
